# Shadow_removing

./: README.md
Experiments/: CMakeLists.txt  main.cpp
Quality/: CMakeLists.txt  convergence_rate.cpp  documents.txt  files_to_process.txt  quality.cpp
Shadow_Removing/: CMakeLists.txt  Doxyfile  remove_shadow.cpp  remove_shadow.h  test.cpp
